add gradio to dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "beautifulsoup4",
     "faiss-cpu",
     "fire",
+    "gradio",
     "numpy",
     "openai",
     "requests",
